app/assets/stylesheets/layout.css
@viewport {
  width: extend-to-zoom;
  zoom: 1.0;
}

@-ms-viewport{
  width: extend-to-zoom;
  zoom: 1.0;
}

header {
  top: 0;
  margin-bottom: 2%;
  width: 100%;
  position: fixed;
}

body {
  background: url(/assets/landing_page/bg1.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.mobile {
  text-align: center;
  margin: 5% 0;
}

.mobile-title {
  border-radius: 0.5em;
}

.description{
  color: white;
  text-align:center;
  margin: 8% 3%;
}

.container {
  width: 960px;
  margin: auto;
  display: block;
  padding: 1%;
  text-align: center;
}

/*for modern browsers */
  .clearfix:before,
  .clearfix:after {
     content: "";
     display: table;
  }
  .clearfix:after {
     clear: both;
  }

  /* IE6-7 */
  .clearfix {
     zoom: 1;
  }

.iphone-image {
  height: 60%;
  width: 300px;
}

.left {
  position: relative;
  width: auto;
  display: inline-block;
  float: left;
  margin: 3% 2% 0 5%;
}

/* MailChimp */

#mc_embed_signup {
  border-radius: 0.5em;
  background: black;
  text-align: center;
  margin: 0 auto;
  width: 75%;
  color: white;
}

.subscribe {
  border-color: #FD4646;
  border-radius: 0.5em;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
}

/* right side */

.right {
  width: 55%;
  display: inline-block;
  border: 15px solid transparent;
  float: left;
  margin: 12% 0;
  background-color: black;
  opacity: 0.5;
  border-radius: .5em;
  text-align: center;
}

.info {
  border-radius: .5em;
  width: 100%;
}

.text-box {
  height: 3em;
  padding: 10px 0 0 0;
  border-radius: .5em;
  background-color: grey;
  margin-top: 1em;
}

.info-square {
  background-color: grey;
  color: white;
  border-radius: .5em;
  text-align: center;
  padding: 0 2%;
}

.signin {
  color: white;
  margin: 5%;
}

/* buttons */

.app-button {
  height: 70px;
  margin-left: 0.90em;
  border-radius: 8px;
}

.signin-button{
  background-color: green;
  border-radius: 0.25em;
  padding: 0 2%;
  color: white;
}

a {
  color: inherit;
  text-decoration: none;
}

.text-button {
  text-decoration: none;
}

input[type=submit] {
  background-color: #FD4646;
  border-radius: 0.25em;
  padding: 0 2%;
  color: white;
  font-size: 20px;
  text-decoration: none;
}

/* images and logos */

.title {
  display: block;
  margin: auto;
  border-radius: 0.5em;
}

/* future features */


.hide {
  display: none;
}

/* site wide standard */

.nv-left {
  padding: 1% 2.5%;
  display: inline-block;
}

.nv-mid {
  padding: 1% 2.5%;
  display: inline-block;
}
.nv-right {
  padding: 1% 2.5%;
  display: inline-block;
}

.nv-right-top-menu {
  padding: 1% 2.5%;
  display: inline-block;
  position: relative;
  right: 0;
}

.nv-block {
  background-color: black;
  color: white;
}

.nv-create-post-box {
  background-color: black;
  color: white;
  border-radius: 0.5em;
  margin: 8% 2% 2% 2%;
  padding: 2%;
}

.nv-main {
  background-color: black;
  color: white;
  border-radius: 0.5em;
  margin: 2% 2%;
  padding: 2%;
  text-align: center;
}

.nv-center {
  text-align: center;
}

.nv-comments {
  background-color: black;
  border-radius: 0.5em;
  margin: 2% 2%;
  padding: 2%;
}

.nv-title {
  font-size: 2.5em;
}

/* Posts */

.post-box {
  font-size: 1.5em;
  text-align: left;
  margin: 0 20% 0;
}

.post-title {
  margin: 0 0 2%;
}

.asked-by {
  font-size: 0.5em;
}

.nv-single-image {
  background-color: black;
  color: white;
  border-radius: 0.5em;
  margin: 2% auto;
  padding: 2%;
  width: 45%;
}

.nv-two-images-vote {
  background-color: black;
  border-radius: 0.5em;
  margin: 2% 2%;
  padding: 2%;
  width: 45%;
}

.nv-two-images-box {
  text-align: center;
  display: inline-block;
  margin: 1%;
  background-color: green;
  border-radius: 0.5em;
  padding: 1%;
}

.nv-two-image-holder {
}

.nv-two-images {
  float: left;
}

.nv-two-images img {
  width: 300px;
  height: 320px%;
  padding: 0.5%;
}

img {
  height: auto;
  max-width: 100%;
}

.gravatar {
  padding: 1% 0 0.5% 1%;
  display: inline-block;
}

/* media queries */

@media only screen and (max-width: 480px) {
  .container {
    width: auto;
    padding: 0;
    margin: auto;
  }

  .body {
    font-size: 10px;
  }

  .nv-title {
    font-size: 15px;
  }

  .iphone-image {
    max-height: 100%;
    max-width: 100%;
    text-align: center;
  }

  .title {
    display: none;
  }

  .info, .info-square, .app-button, .middle, .nv-single-image {
    width: auto;
    margin: auto;
  }

  .right {
    width: 280px;
    margin: 2% 1.5%;
  }

  .left {
    margin: 2% 2.5%;
  }

  .text-box {
    text-align: center;
  }

  .description {
    margin-bottom: 10%;
  }

  .text-box {
    height: 3.5em;
  }

  .nv-left, .nv-mid, .nv-right, .nv-right-top-menu {
    padding: 2.5%;
  }

  .nv-two-images-box {
    max-height: 50%;
    max-width: 100%;
  }

  .nv-two-images {
    max-height: auto;
    max-width: 48%;
    padding: 0.5%;
  }
}

@media only screen and (min-width: 481px) and (max-width: 1088px) {

  .mobile {
    display: none;
  }

  .left{
    margin: 0;
  }

  .right {
    margin: 10% 2%;
    height: 450px;
  }
}

@media only screen and (min-width: 1089px) {

  .mobile {
    display: none;
  }
}

